# amplifier-core

./: .gitignore  CHANGELOG.md  CONTRACTS.md  Cargo.toml  MODULES.md  README.md  bundle.md  pyproject.toml
.github/workflows/: node-npm-publish.yml  proto-check.yml  rust-core-ci.yml  rust-core-wheels.yml
agents/: core-expert.md
amplifier_core/: __init__.py  approval.py  cancellation.py  capabilities.py  content_models.py  coordinator.py  display.py  events.py  hooks.py  ids.py  interfaces.py  llm_errors.py  loader.py  message_models.py  models.py  module_sources.py  pytest_plugin.py  session.py  testing.py
amplifier_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
amplifier_core/utils/: __init__.py  retry.py
amplifier_core/validation/: __init__.py  context.py  hook.py  mount_plan.py  orchestrator.py  provider.py  tool.py
behaviors/: core-expert.yaml
bindings/node/: .gitignore  Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
bindings/node/__tests__/: cancellation.test.ts  coordinator.test.ts  errors.test.ts  fixtures.ts  hooks.test.ts  integration.test.ts  modules.test.ts  node-wasm-session.test.ts  session.test.ts  smoke.test.ts  types.test.ts
bindings/node/src/: cancellation.rs  coordinator.rs  enums.rs  errors.rs  hook_result.rs  hooks.rs  lib.rs  module_resolver.rs  session.rs  tools.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/python/amplifier_core/: __init__.py  _engine.pyi  interfaces.py
bindings/python/src/: bridges.rs  cancellation.rs  errors.rs  helpers.rs  hooks.rs  lib.rs  module_resolver.rs  retry.rs  session.rs  wasm.rs
bindings/python/src/coordinator/: capabilities.rs  hook_dispatch.rs  mod.rs  mount_points.rs
bindings/python/src/tests/: mod.rs
bindings/python/tests/: test_cancellation_token.py  test_capabilities_constants.py  test_coroutine_compat.py  test_cost_models.py  test_dispatch_integration.py  test_dogfood_validation.py  test_emit_json_sanitize.py  test_error_fields.py  test_event_constants.py  test_grpc_integration.py  test_loader_dispatch.py  test_loader_grpc.py  test_milestone6_integration.py  test_protocol_conformance.py  test_pydantic_model_dump_guard.py  test_python_stubs.py  test_retry_bindings.py  test_rust_session_lifecycle.py  test_schema_sync.py  test_session_start_dedup.py  test_stub_validation.py  test_switchover_coordinator.py  test_switchover_hooks.py  test_switchover_imports.py  test_switchover_session.py
context/: kernel-overview.md  release-mandate.md
crates/amplifier-core/: Cargo.toml  build.rs
crates/amplifier-core/src/: cancellation.rs  capabilities.rs  coordinator.rs  errors.rs  events.rs  grpc_server.rs  hooks.rs  lib.rs  messages.rs  models.rs  module_resolver.rs  retry.rs  session.rs  testing.rs  traits.rs  transport.rs  wasm_engine.rs
crates/amplifier-core/src/bridges/: grpc_approval.rs  grpc_context.rs  grpc_hook.rs  grpc_orchestrator.rs  grpc_provider.rs  grpc_tool.rs  mod.rs  wasm_approval.rs  wasm_context.rs  wasm_hook.rs  wasm_orchestrator.rs  wasm_provider.rs  wasm_tool.rs
crates/amplifier-core/tests/: grpc_tool_e2e.rs  mixed_transport_e2e.rs  module_resolver_e2e.rs  native_tool_e2e.rs  session_lifecycle_e2e.rs  wasm_e2e.rs  wasm_resource_limits.rs  wasm_tool_e2e.rs
crates/amplifier-guest/: Cargo.toml
docs/: COORDINATOR_INFRASTRUCTURE_CONTEXT.md  CORE_DEVELOPMENT_PRINCIPLES.md  DESIGN_PHILOSOPHY.md  HOOKS_API.md  HOOKS_EVENTS.md  HOOKS_GUIDE.md  HOOKS_PATTERNS.md  HOOKS_SECURITY.md  MODULE_SOURCE_PROTOCOL.md  MOUNT_PLAN_SPECIFICATION.md  README.md  RUST_CORE_LIMITATIONS.md  RUST_CORE_TESTING.md  SESSION_FORK_SPECIFICATION.md
docs/contracts/: CONTEXT_CONTRACT.md  HOOK_CONTRACT.md  README.md  (+3 more)
examples/: node-wasm-session.ts  python-wasm-session.py
proto/: amplifier_module.proto  amplifier_module_pb2.py  amplifier_module_pb2_grpc.py  test_task03_module_specific.py
scripts/: bump_version.py  e2e-smoke-test.sh  generate_pyi.py
tests/: test_all_events_from_engine.py  test_approval_provider_bridge.py  test_backward_compat_phase3.py  test_cancellation_resilience.py  test_capabilities_taxonomy.py  test_check_on_session_ready.py  test_ci_workflows.py  test_context_manager_bridge.py  test_contracts_lifecycle_section.py  test_contribution_channels.py  test_coordinator_reexport_engine.py  test_cost_usd_serialization.py  test_cpv_kernel_verbosity_collapse.py  test_display_service_bridge.py  test_event_taxonomy.py  test_events_provider_throttle.py  test_generated_equivalence.py  test_grpc_stubs_regenerated.py  test_hook_validation_debug.py  test_hooks.py  test_hooks_timestamp.py  test_interfaces.py  test_llm_errors.py  test_loader.py  test_loader_cache.py  test_loader_on_session_ready.py  test_loader_transport_dispatch.py  test_loader_warning.py  test_message_models.py  test_model_info_extension.py  test_model_info_pricing.py  test_module_coordinator_import.py  test_multi_instance.py  test_pristine_validation_imports.py  test_process_hook_result.py  test_proto_compilation.py  test_proto_kernel_service.py  test_proto_module_lifecycle.py  test_proto_module_services.py  test_proto_schema_validation.py  (+17 more)
tests/fixtures/wasm/src/auto-approve/: Cargo.toml  amplifier.toml
tests/fixtures/wasm/src/auto-approve/src/: bindings.rs  lib.rs
tests/fixtures/wasm/src/auto-approve/wit/: approval.wit
tests/fixtures/wasm/src/deny-hook/: Cargo.toml  amplifier.toml
tests/fixtures/wasm/src/deny-hook/src/: bindings.rs  lib.rs
tests/fixtures/wasm/src/deny-hook/wit/: amplifier-modules.wit  hook.wit
tests/fixtures/wasm/src/echo-provider/: Cargo.toml  amplifier.toml
tests/fixtures/wasm/src/echo-provider/src/: bindings.rs  lib.rs
tests/fixtures/wasm/src/echo-provider/wit/: provider.wit
tests/fixtures/wasm/src/echo-tool/: Cargo.toml  amplifier.toml
tests/fixtures/wasm/src/echo-tool/src/: bindings.rs  lib.rs
tests/fixtures/wasm/src/memory-context/: Cargo.toml  amplifier.toml
tests/fixtures/wasm/src/memory-context/src/: bindings.rs  lib.rs
tests/fixtures/wasm/src/memory-context/wit/: context.wit
wit/: amplifier-modules.wit
(+76 files in other folders)
