[project]
name = "amplifier-core"
version = "1.0.0"
description = "Ultra-thin core for Amplifier modular AI agent system"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0.3",
    "tomli>=2.0",
    "typing-extensions>=4.0",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_core",
]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
