[project]
name = "amplifier-core"
version = "1.1.1"
description = "Rust kernel with Python bindings for the Amplifier modular AI agent framework"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
keywords = ["ai", "agent", "llm", "rust", "pyo3", "maturin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.3.1",
    "pydantic>=2.0",
    "pyyaml>=6.0.3",
    "tomli>=2.0",
    "typing-extensions>=4.0",
]

[project.scripts]
amplifier-core = "amplifier_core.cli:main"

[project.entry-points."pytest11"]
amplifier_module = "amplifier_core.pytest_plugin"

[project.urls]
Homepage = "https://github.com/microsoft/amplifier-core"
Documentation = "https://github.com/microsoft/amplifier-core/tree/main/docs"
Repository = "https://github.com/microsoft/amplifier-core"
Issues = "https://github.com/microsoft/amplifier-core/issues"

[build-system]
requires = ["maturin>=1.9"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "amplifier_core._engine"
bindings = "pyo3"
manifest-path = "bindings/python/Cargo.toml"
include = [
    { path = "LICENSE", format = "sdist" },
    { path = "README.md", format = "sdist" },
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "maturin>=1.9",
]

[tool.pytest.ini_options]
testpaths = ["tests", "bindings/python/tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"
