[package]
name = "amplifier-core-node"
version = "1.0.10"
edition = "2021"
description = "Napi-RS bridge for amplifier-core Rust kernel"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
amplifier-core = { path = "../../crates/amplifier-core", features = ["wasm"] }
napi = { version = "2", features = ["async", "serde-json", "napi9"] }
napi-derive = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"
