[package]
name = "amplifier-core-py"
version = "1.0.0"
edition = "2021"
description = "PyO3 bridge for amplifier-core Rust kernel"
license = "MIT"
publish = false

[lib]
name = "_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
amplifier-core = { path = "../../crates/amplifier-core" }
pyo3 = { version = "0.28", features = ["generate-import-lib"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }

