[package]
name = "amplifier-core-py"
version = "1.4.0"
edition = "2021"
description = "PyO3 bridge for amplifier-core Rust kernel"
license = "MIT"
publish = false

[lib]
name = "_engine"
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = ["amplifier-core/wasm"]

[dependencies]
amplifier-core = { path = "../../crates/amplifier-core" }
pyo3 = { version = "0.28.2", features = ["generate-import-lib", "multiple-pymethods", "abi3-py311"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
pyo3-log = "0.13"
log = "0.4"
prost = "0.13"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }

