[package]
name = "amplifier-core"
version = "1.0.13"
edition = "2021"
description = "Pure Rust kernel for the Amplifier modular AI agent system"
license = "MIT"
repository = "https://github.com/microsoft/amplifier-core"

[dependencies]
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
log = "0.4"
prost = "0.13"
tonic = "0.12"
tokio-stream = { version = "0.1", features = ["net"] }
wasmtime = { version = "29", optional = true }

[features]
default = []
wasm = ["wasmtime"]

[build-dependencies]
tonic-build = "0.12"
