[package]
name = "deny-hook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
amplifier-guest = { path = "../../../../../crates/amplifier-guest" }
serde_json = "1"
wit-bindgen-rt = "0.41"

[package.metadata.component]
package = "amplifier:deny-hook"

[package.metadata.component.target]
world = "hook-module"
path = "wit"

[workspace]
